vlib/v/parser/tests/expr_evaluated_but_not_used_d.out
vlib/v/parser/tests/expr_evaluated_but_not_used_d.v:4:5: error: expression evaluated but not used
    2 |     a := 1
    3 |     b := 2
    4 |     a+b
      |     ~~~
    5 |     println(a*b)
    6 | }
