vlib/v/parser/tests/expr_evaluated_but_not_used_d.vv
fn main() {
    a := 1
    b := 2
    a+b
    println(a*b)
}